--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,9 @@ factory-boy==3.2.1
 Faker==9.9.0
 pytest==7.0.0
 pytest-django==4.5.2
-pytest-factoryboy==2.1.0
+pytest-mock==3.7.0
 psycopg2==2.9.3
 requests==2.27.1
 django-extensions==3.1.5
 drf-yasg==1.20.0
+requests-mock==1.9.3
